--- a/ChainWalk/Makefile.org
+++ b/ChainWalk/Makefile.org
@@ -19,6 +19,8 @@ tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs
 ** C source to .o file
   #+begin_src make :tangle Makefile :noweb yes
   CFLAGS+=-I..
+c2obj=gcc $(CFLAGS) -c $1
+
    #+end_src
   #+begin_src makefile :tangle Makefile :noweb yes
 <<Generator_c2o_make>>
@@ -26,6 +28,7 @@ tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs
   #+end_src
 ** .o to .exe
   #+begin_src makefile :tangle Makefile :noweb yes
+O2EXE=gcc $(LFLAGS)
 <<Generator_o2exe_make>>
 <<lagoudakis2003least_figure10_o2exe_make>>
   #+end_src
