--- a/InvertedPendulum/Makefile.org
+++ b/InvertedPendulum/Makefile.org
@@ -71,6 +71,7 @@ nuke: #You probably don't want to make this one
 Those who do not fit in the others categories (because they fit in more than one or none of them) are aggregated here :
   #+begin_src makefile :tangle Makefile :noweb yes
 <<LSTDmu_Exp_make>>
+<<LAFEM_Exp2_make>>
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
@@ -106,7 +107,8 @@ O2EXE=gcc $(LFLAGS)
 <<InvertedPendulum_clean_make>>
 <<Simulator_clean_make>>
 <<LSTDmu_Exp_clean_make>>
-clean: Generator_clean InvertedPendulum_clean Simulator_clean LSTDmu_Exp_clean
+<<LAFEM_Exp2_clean_make>>
+clean: Generator_clean InvertedPendulum_clean Simulator_clean LSTDmu_Exp_clean LAFEM_Exp2_clean
 
     #+end_src
 
