LAFEM_Exp3 works

--- a/Makefile.org
+++ b/Makefile.org
@@ -104,6 +104,11 @@ LAFEM_Exp1:
 LAFEM_Exp2:
 	make -C InvertedPendulum LAFEM_Exp2_true_R.pdf LAFEM_Exp2_lafem_R.pdf LAFEM_Exp2_Vexpert.pdf LAFEM_Exp2_Vagent.pdf
     #+end_src
+   - LAFEM_Exp3 (InvertedPendulum)
+    #+begin_src makefile :tangle Makefile
+LAFEM_Exp3:
+	make -C InvertedPendulum LAFEM_Exp3_true_R.pdf LAFEM_Exp3_lafem_R.pdf LAFEM_Exp3_Vexpert.pdf LAFEM_Exp3_Vagent.pdf
+    #+end_src
 
 ** TaskTransfer
    - TT_Exp1 (GridWorld)
