--- a/InvertedPendulum/Makefile.org
+++ b/InvertedPendulum/Makefile.org
@@ -72,6 +72,7 @@ Those who do not fit in the others categories (because they fit in more than one
   #+begin_src makefile :tangle Makefile :noweb yes
 <<LSTDmu_Exp_make>>
 <<LAFEM_Exp2_make>>
+<<LAFEM_Exp3_make>>
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
@@ -108,7 +109,8 @@ O2EXE=gcc $(LFLAGS)
 <<Simulator_clean_make>>
 <<LSTDmu_Exp_clean_make>>
 <<LAFEM_Exp2_clean_make>>
-clean: Generator_clean InvertedPendulum_clean Simulator_clean LSTDmu_Exp_clean LAFEM_Exp2_clean
+<<LAFEM_Exp3_clean_make>>
+clean: Generator_clean InvertedPendulum_clean Simulator_clean LSTDmu_Exp_clean LAFEM_Exp2_clean LAFEM_Exp3_clean
 
     #+end_src
 
