--- a/InvertedPendulum/Makefile.org
+++ b/InvertedPendulum/Makefile.org
@@ -73,6 +73,7 @@ Those who do not fit in the others categories (because they fit in more than one
 <<LSTDmu_Exp_make>>
 <<LAFEM_Exp2_make>>
 <<LAFEM_Exp3_make>>
+<<LAFEM_Exp4_make>>
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
@@ -110,7 +111,8 @@ O2EXE=gcc $(LFLAGS)
 <<LSTDmu_Exp_clean_make>>
 <<LAFEM_Exp2_clean_make>>
 <<LAFEM_Exp3_clean_make>>
-clean: Generator_clean InvertedPendulum_clean Simulator_clean LSTDmu_Exp_clean LAFEM_Exp2_clean LAFEM_Exp3_clean
+<<LAFEM_Exp4_clean_make>>
+clean: Generator_clean InvertedPendulum_clean Simulator_clean LSTDmu_Exp_clean LAFEM_Exp2_clean LAFEM_Exp3_clean LAFEM_Exp4_clean
 
     #+end_src
 
