--- a/Makefile.org
+++ b/Makefile.org
@@ -109,6 +109,11 @@ LAFEM_Exp2:
 LAFEM_Exp3:
 	make -C InvertedPendulum LAFEM_Exp3_true_R.pdf LAFEM_Exp3_lafem_R.pdf LAFEM_Exp3_Vexpert.pdf LAFEM_Exp3_Vagent.pdf
     #+end_src
+   - LAFEM_Exp4 (InvertedPendulum)
+    #+begin_src makefile :tangle Makefile
+LAFEM_Exp4:
+	make -C InvertedPendulum LAFEM_Exp4_quality.dat
+    #+end_src
 
 ** TaskTransfer
    - TT_Exp1 (GridWorld)
