L'expérience 3 fonctionne à nouveau
La valeur de alpha donnée dans le papier de CAp est fausse, car il y a un bug (mauvaise indentation, ce qui en python signifie mauvaise boucle) dans LAFEM.py. En changeant la valeur de alpha on parvient à retrouver les mêmes figures.

--- a/Makefile.org
+++ b/Makefile.org
@@ -71,7 +71,7 @@ org2pdf=emacs -batch --visit $1.org --funcall org-export-as-latex --script ~/.em
     #+end_src
 ** Cleaning
     #+begin_src makefile :tangle Makefile :noweb yes
-export XARGS_OPT=-t
+export XARGS_OPT=-tr
 <<LSPI_clean_make>>
 <<LSTDQ_clean_make>>
 <<LSTDmu_clean_make>>
