--- a/Makefile.org
+++ b/Makefile.org
@@ -116,7 +116,7 @@ LAFEM_Exp4:
 LAFEM_Exp42:
 	make -C InvertedPendulum LAFEM_Exp4_quality_EB.pdf
     #+end_src
-   - LAFEM_Exp5 (InvertedPendulum)
+   - LAFEM_Exp5 (InvertedPendulum) //FIXME:Le virer, manifesteent il n'existe pas.
     #+begin_src makefile :tangle Makefile
 LAFEM_Exp5:
 	make -C InvertedPendulum LAFEM_Exp5_true_R.pdf LAFEM_Exp5_lafem_R.pdf LAFEM_Exp5_Vexpert.pdf LAFEM_Exp5_Vagent.pdf
@@ -130,6 +130,11 @@ LAFEM_Exp6:
     #+begin_src makefile :tangle Makefile
 LAFEM_Exp6_EB:
 	make -C Highway FastResults_EB.pdf SafeResults_EB.pdf
+    #+end_src
+   - LAFEM_Exp7 (InvertedPendulum)
+    #+begin_src makefile :tangle Makefile
+LAFEM_Exp7:
+	make -C InvertedPendulum LAFEM_Exp7_Vphi.pdf LAFEM_Exp7_Vmu.pdf
     #+end_src
      
 ** TaskTransfer
